Fix: hidden overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,5 @@ body {
     margin: 0;
     min-height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 }
